cod-tools (unreleased)

  * ...

cod-tools (3.8.0)

  * Added:
    - COD::AtomProperties assembler:
        - covalent radii from Lang and Smith (2014).
        - covalent radii from Zhang (2018).
    - COD::CIF::Data::Check:
        - the check_unquoted_strings() subroutine.
    - COD::CIF::DDL::DDLm:
        - the get_type_source() subroutine.
    - cif_cod_check:
        - the '--check-unquoted-strings' option.
    - cif_molecule:
        - copying '_chemical_name_common', '_chemical_name_systematic' and
          '_chemical_name_mineral' CIF data items from input files to output.
    - dependency installers for Fedora 37, Fedora 38 and Fedora 39.
    - dependency installer for Debian 12.
    - dependency installer for Ubuntu 22.04.
    - COD::Spacegroups::Lookup::COD:
        - four more non-standard space group settings:
            - H-M symbols: 'P 4 21 2 (a-1/4,b+1/4,c)', 'C 2 2 21 (a,b,c+1/4)',
                           'P 21 21 21 (a+1/4,b-1/4,c)', 'P 42/m m c'.
            - Hall symbols: 'P 4ab 2ab (x+1/4,y-1/4,z)', 'C 2c 2 (x,y,z-1/4)',
                            'P 2ac 2ab (x-1/4,y+1/4,z)', -P 4c 2 (x,y+1/2,z)'.
    - cif_estimate_Z:
        - options '--print-header' and '--print-data-block' and their negations.
        - options '--always-continue', '--continue-on-errors', their synonyms
          and negations.
    - the COD::SemVer module.
    - the cif_guess_AMCSD_atom_types script.
  * Changed:
    - COD::CIF::DDL::DDLm::Import:
      - Improved the handling of orphan definitions.
    - COD::CIF::DDL::DDLm::Validate:
      - started treating data items with associated dREL code which assigns
        a default value as evaluatable.
    - COD::SPGLib:
      - switched to spglib v2.1.0.
    - data/replacement-values/replacement_tags.lst:
      - added several data name replacement rules.
    - data/replacement_values/replacement_values.lst
      - added several replacement rules for the following data items:
        - '_atom_site_adp_type'.