@@ -1,24 +1,36 @@
 #\#CIF_2.0
-data_code
+##
+# NOTE: before DDLm reference dictionary version 4.2.0, 'Symop' values were
+# allowed to start with any integer, not only the positive ones. However,
+# in practice such values did not occur in properly formatted CIF files since
+# the integer part of a 'Symop' string reference a symettry operation id
+# which is defined as a positive integer.
+##
+data_[VALID]_code
 loop_
 _category.key
 _category.symop_item
 1 1_111
 2 1_2222
 3 1_12345
-4 +42_124
-5 -84_123
-6 123456
-7 1
-8 '2 333'
-9 '3 22'
-10 '4_1'
-11 a_1235
-12
+4 123456
+5 1
+6 '2 333'
+7
 ;1_111
 ;
-13
+
+data_[INVALID]_code
+loop_
+_category.key
+_category.symop_item
+1 +42_124
+2 -84_123
+3 '3 22'
+4 '4_1'
+5 a_1235
+6
 ;
 1_111
 ;
-14 002_000
+7 002_000
