@@ -1,4 +1,7 @@
-scripts/ddlm_validate: tests/cases/ddlm_validate_024.inp data_code: NOTE, data item '_category.symop_item' value '&#10;1_111' violates content type constraints -- the value should be a string composed of an integer optionally followed by an underscore or space and three or more digits.
-scripts/ddlm_validate: tests/cases/ddlm_validate_024.inp data_code: NOTE, data item '_category.symop_item' value '3 22' violates content type constraints -- the value should be a string composed of an integer optionally followed by an underscore or space and three or more digits.
-scripts/ddlm_validate: tests/cases/ddlm_validate_024.inp data_code: NOTE, data item '_category.symop_item' value '4_1' violates content type constraints -- the value should be a string composed of an integer optionally followed by an underscore or space and three or more digits.
-scripts/ddlm_validate: tests/cases/ddlm_validate_024.inp data_code: NOTE, data item '_category.symop_item' value 'a_1235' violates content type constraints -- the value should be a string composed of an integer optionally followed by an underscore or space and three or more digits.
+scripts/ddlm_validate: tests/cases/ddlm_validate_024.inp data_[INVALID]_code: NOTE, data item '_category.symop_item' value '&#10;1_111' violates content type constraints -- the value should be a string composed of a positive integer optionally followed by an underscore or space and three or more digits.
+scripts/ddlm_validate: tests/cases/ddlm_validate_024.inp data_[INVALID]_code: NOTE, data item '_category.symop_item' value '+42_124' violates content type constraints -- the value should be a string composed of a positive integer optionally followed by an underscore or space and three or more digits.
+scripts/ddlm_validate: tests/cases/ddlm_validate_024.inp data_[INVALID]_code: NOTE, data item '_category.symop_item' value '-84_123' violates content type constraints -- the value should be a string composed of a positive integer optionally followed by an underscore or space and three or more digits.
+scripts/ddlm_validate: tests/cases/ddlm_validate_024.inp data_[INVALID]_code: NOTE, data item '_category.symop_item' value '002_000' violates content type constraints -- the value should be a string composed of a positive integer optionally followed by an underscore or space and three or more digits.
+scripts/ddlm_validate: tests/cases/ddlm_validate_024.inp data_[INVALID]_code: NOTE, data item '_category.symop_item' value '3 22' violates content type constraints -- the value should be a string composed of a positive integer optionally followed by an underscore or space and three or more digits.
+scripts/ddlm_validate: tests/cases/ddlm_validate_024.inp data_[INVALID]_code: NOTE, data item '_category.symop_item' value '4_1' violates content type constraints -- the value should be a string composed of a positive integer optionally followed by an underscore or space and three or more digits.
+scripts/ddlm_validate: tests/cases/ddlm_validate_024.inp data_[INVALID]_code: NOTE, data item '_category.symop_item' value 'a_1235' violates content type constraints -- the value should be a string composed of a positive integer optionally followed by an underscore or space and three or more digits.
