@@ -20,8 +20,8 @@ scripts/ddlm_validate: tests/cases/ddlm_validate_025.inp data_code: NOTE, data i
 scripts/ddlm_validate: tests/cases/ddlm_validate_025.inp data_code: NOTE, data item '_category.range_item' value '?' violates content type constraints -- the value should be a range of numerical values of the form 'min&colon;max' (5 times).
 scripts/ddlm_validate: tests/cases/ddlm_validate_025.inp data_code: NOTE, data item '_category.real_item' value '.' violates content type constraints -- the value should be a floating-point real number (5 times).
 scripts/ddlm_validate: tests/cases/ddlm_validate_025.inp data_code: NOTE, data item '_category.real_item' value '?' violates content type constraints -- the value should be a floating-point real number (5 times).
-scripts/ddlm_validate: tests/cases/ddlm_validate_025.inp data_code: NOTE, data item '_category.symop_item' value '.' violates content type constraints -- the value should be a string composed of an integer optionally followed by an underscore or space and three or more digits (5 times).
-scripts/ddlm_validate: tests/cases/ddlm_validate_025.inp data_code: NOTE, data item '_category.symop_item' value '?' violates content type constraints -- the value should be a string composed of an integer optionally followed by an underscore or space and three or more digits (5 times).
+scripts/ddlm_validate: tests/cases/ddlm_validate_025.inp data_code: NOTE, data item '_category.symop_item' value '.' violates content type constraints -- the value should be a string composed of a positive integer optionally followed by an underscore or space and three or more digits (5 times).
+scripts/ddlm_validate: tests/cases/ddlm_validate_025.inp data_code: NOTE, data item '_category.symop_item' value '?' violates content type constraints -- the value should be a string composed of a positive integer optionally followed by an underscore or space and three or more digits (5 times).
 scripts/ddlm_validate: tests/cases/ddlm_validate_025.inp data_code: NOTE, data item '_category.tag_item' value '.' violates content type constraints -- the value must start with an underscore ('_') symbol (5 times).
 scripts/ddlm_validate: tests/cases/ddlm_validate_025.inp data_code: NOTE, data item '_category.tag_item' value '?' violates content type constraints -- the value must start with an underscore ('_') symbol (5 times).
 scripts/ddlm_validate: tests/cases/ddlm_validate_025.inp data_code: NOTE, data item '_category.uri_item' value '.' violates content type constraints -- an URI string must start with a scheme component (5 times).
