@@ -1,6 +1,9 @@
 cod-tools (unreleased)
 
-  * ...
+  * Changed:
+    - COD::CIF::DDL::DDLm::Validate:
+        - updated the 'Symop' content type validation logic in accordance to
+          the changes in the DDLm reference dictionary version 4.2.0.
 
 cod-tools (3.8.0)
 
